--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
     <meta name=viewport content="width=device-width,initial-scale=1">
     <link href=https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css rel=stylesheet integrity=sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN crossorigin=anonymous>
     <link rel="shortcut icon" href="./logo.png" type=image/x-icon>
-    <link rel=icon href=/logo.png type=image/x-icon>
+    <link rel=icon href="./logo.png" type=image/x-icon>
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel=stylesheet>
-    <link href=/css/app.7a2a0251.css rel=preload as=style><link href=/js/app.a062412d.js rel=preload as=script><link href=/js/chunk-vendors.5dd8e32a.js rel=preload as=script><link href=/css/app.7a2a0251.css rel=stylesheet></head><body><noscript><strong>We're sorry but todos doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=/js/chunk-vendors.5dd8e32a.js></script><script src=/js/app.a062412d.js></script></body></html>
+    <link href="./css/app.7a2a0251.css" rel=preload as=style><link href="./js/app.a062412d.js" rel=preload as=script>
+    <link href="./js/chunk-vendors.5dd8e32a.js" rel=preload as=script>
+    <link href="./css/app.7a2a0251.css" rel=stylesheet></head>
+    <body><noscript><strong>We're sorry but todos doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript>
+        <div id=app></div><script src="./js/chunk-vendors.5dd8e32a.js"></script><script src="./js/app.a062412d.js"></script></body></html>
