--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <link href=https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css rel=stylesheet integrity=sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN crossorigin=anonymous>
 <link rel="shortcut icon" href="./logo.png" type=image/x-icon>
 <link rel=icon href="./logo.png" type=image/x-icon>
+<link rel="stylesheet" type="text/css" href="https://unpkg.com/todomvc-app-css@2.2.0/index.css" />
 <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel=stylesheet>
 <link href="./css/app.19a9935e.css" rel=preload as=style>
 <link href="./js/app.8fa9778e.js" rel=preload as=script>
